--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>GameView</title>
   <link rel="stylesheet" href="../CSS/reset.css" />
   <link rel="stylesheet" href="../CSS/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,8 +24,8 @@
         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="">Novidades</a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="./reviews/r_DarkSouls3.html">Dark Souls III</a></li>
-          <li><a class="dropdown-item" href="../reviews/r_HollowKnight.html">Hollow Knight</a></li>
-          <li><a class="dropdown-item" href="../reviews/r_Subnautica.html">Subnatica</a></li>
+          <li><a class="dropdown-item" href="./reviews/r_HollowKnight.html">Hollow Knight</a></li>
+          <li><a class="dropdown-item" href="./reviews/r_Subnautica.html">Subnatica</a></li>
         </ul>
       </li>
       <li class="nav-item">
