--- a/src/html/reviews/r_Subnautica.html
+++ b/src/html/reviews/r_Subnautica.html
@@ -17,7 +17,7 @@
     <ul class="nav nav-tabs justify-content-center" id="nav">
       <h1>Game<span>View</span></h1>
       <li class="nav-item">
-        <a class="nav-link" href="./index.html">Início</a>
+        <a class="nav-link" href="../index.html">Início</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#">Novidades</a>
