--- a/src/html/credits.html
+++ b/src/html/credits.html
@@ -98,13 +98,13 @@
       <div class="col-6">
         <form action="">
           <label for="name">Nome de usuário:</label>
-          <input type="text" name="name" id="name"><br>
+          <input type="text" name="name" id="name" required><br>
 
           <label for="email">Insira seu e-mail:</label>
-          <input type="email" name="email" id=""><br>
+          <input type="email" name="email" id="" required><br>
 
           <label for="phone">Insira seu telefone:</label>
-          <input type="phone" name="phone" id="phone">
+          <input type="phone" name="phone" id="phone" required>
           <br>
           <input type="submit" name="" id="bttn" value="Enviar"> <input type="reset" name="" id="bttn">
           
